--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,7 +36,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
+  background-color: rgb(45, 63, 82);
 }
 
 /* :focus and :active are two different states.
